{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 93,
  "lineage": "427d6f14-f3fb-06c6-ad82-7480f603f47b",
  "resources": [
    {
      "module": "module.apache_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a38b8c18f189761a",
            "arn": "arn:aws:ec2:us-east-1:844787442232:instance/i-0004b9a42dbbf470a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0004b9a42dbbf470a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TerraKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0355b28c57974ea38",
            "private_dns": "ip-10-0-3-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ca83034e5890881",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ffd8dd8a661048",
            "tags": {
              "Name": "zeyad-s-apache-1"
            },
            "tags_all": {
              "Name": "zeyad-s-apache-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de5aa2248debfd5b"
            ]
          },
          "dependencies": [
            "module.apache_private.data.aws_ami.amazon_linux",
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a38b8c18f189761a",
            "arn": "arn:aws:ec2:us-east-1:844787442232:instance/i-0884f66d89e98cc17",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0884f66d89e98cc17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TerraKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0055ef2d3f77348d8",
            "private_dns": "ip-10-0-4-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02354d493a6ff6ee8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045ed5b6cbe5e6eb6",
            "tags": {
              "Name": "zeyad-s-apache-2"
            },
            "tags_all": {
              "Name": "zeyad-s-apache-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de5aa2248debfd5b"
            ]
          },
          "dependencies": [
            "module.apache_private.data.aws_ami.amazon_linux",
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03482a5c4933d5946",
            "arn": "arn:aws:ec2:us-east-1:844787442232:elastic-ip/eipalloc-03482a5c4933d5946",
            "domain": "vpc",
            "id": "eipalloc-03482a5c4933d5946",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-123-153.compute-1.amazonaws.com",
            "public_ip": "3.234.123.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zeyad_s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:internet-gateway/igw-0dfcaadd8435d8c79",
            "id": "igw-0dfcaadd8435d8c79",
            "owner_id": "844787442232",
            "tags": {
              "Name": "zeyad-s-igw"
            },
            "tags_all": {
              "Name": "zeyad-s-igw"
            },
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "dependencies": [
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03482a5c4933d5946",
            "association_id": "eipassoc-00f66218523b5e2d0",
            "connectivity_type": "public",
            "id": "nat-097667a3b15077ef0",
            "network_interface_id": "eni-06d9d380b42c7ae62",
            "private_ip": "10.0.1.34",
            "public_ip": "3.234.123.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f39a2a3a1ab54b8e",
            "tags": {
              "Name": "zeyad-s-nat-gw"
            },
            "tags_all": {
              "Name": "zeyad-s-nat-gw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:route-table/rtb-03c353c6e4bb5c221",
            "id": "rtb-03c353c6e4bb5c221",
            "owner_id": "844787442232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-097667a3b15077ef0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zeyad-s-private-route-table"
            },
            "tags_all": {
              "Name": "zeyad-s-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zeyad_s_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:route-table/rtb-0cdefe43c392097a6",
            "id": "rtb-0cdefe43c392097a6",
            "owner_id": "844787442232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dfcaadd8435d8c79",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zeyad-s-public-route-table"
            },
            "tags_all": {
              "Name": "zeyad-s-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.zeyad_s_igw",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec1e95f6462f7204",
            "route_table_id": "rtb-03c353c6e4bb5c221",
            "subnet_id": "subnet-049ffd8dd8a661048"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091cbb024660ff752",
            "route_table_id": "rtb-03c353c6e4bb5c221",
            "subnet_id": "subnet-045ed5b6cbe5e6eb6"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ca762f53226f85b",
            "route_table_id": "rtb-0cdefe43c392097a6",
            "subnet_id": "subnet-0f39a2a3a1ab54b8e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.zeyad_s_igw",
            "module.network.aws_route_table.zeyad_s_public_route_table",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa605f4409ecccb6",
            "route_table_id": "rtb-0cdefe43c392097a6",
            "subnet_id": "subnet-00a989acc6066f715"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.zeyad_s_igw",
            "module.network.aws_route_table.zeyad_s_public_route_table",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zeyad_s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:security-group/sg-0de5aa2248debfd5b",
            "description": "Allow SSH, HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de5aa2248debfd5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "zeyad-s-sg",
            "name_prefix": "",
            "owner_id": "844787442232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zeyad-s-sg"
            },
            "tags_all": {
              "Name": "zeyad-s-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zeyad_s_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:subnet/subnet-049ffd8dd8a661048",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049ffd8dd8a661048",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844787442232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zeyad-s-private-subnet-1"
            },
            "tags_all": {
              "Name": "zeyad-s-private-subnet-1"
            },
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "dependencies": [
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:subnet/subnet-045ed5b6cbe5e6eb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045ed5b6cbe5e6eb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844787442232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zeyad-s-private-subnet-2"
            },
            "tags_all": {
              "Name": "zeyad-s-private-subnet-2"
            },
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "dependencies": [
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zeyad_s_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:subnet/subnet-0f39a2a3a1ab54b8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f39a2a3a1ab54b8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844787442232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zeyad-s-public-subnet-1"
            },
            "tags_all": {
              "Name": "zeyad-s-public-subnet-1"
            },
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "dependencies": [
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:subnet/subnet-00a989acc6066f715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a989acc6066f715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844787442232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zeyad-s-public-subnet-2"
            },
            "tags_all": {
              "Name": "zeyad-s-public-subnet-2"
            },
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "dependencies": [
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zeyad_s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844787442232:vpc/vpc-0dd9642ccfa85ae76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a7c8d6ae82e7d0a",
            "default_route_table_id": "rtb-0a306a30a1ffce3b4",
            "default_security_group_id": "sg-05083022c2254e6bf",
            "dhcp_options_id": "dopt-0e87331c7a11f0af7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd9642ccfa85ae76",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a306a30a1ffce3b4",
            "owner_id": "844787442232",
            "tags": {
              "Name": "zeyad-s-vpc"
            },
            "tags_all": {
              "Name": "zeyad-s-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.nginx_proxy",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a38b8c18f189761a",
            "arn": "arn:aws:ec2:us-east-1:844787442232:instance/i-0cab83e611abcbd6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cab83e611abcbd6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TerraKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0650554639e18dca0",
            "private_dns": "ip-10-0-1-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-44-202-73-183.compute-1.amazonaws.com",
            "public_ip": "44.202.73.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0396557f0cbf31568",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f39a2a3a1ab54b8e",
            "tags": {
              "Name": "zeyad-s-nginx-proxy-1"
            },
            "tags_all": {
              "Name": "zeyad-s-nginx-proxy-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de5aa2248debfd5b"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.zeyad_s_igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_route_table.zeyad_s_public_route_table",
            "module.network.aws_route_table_association.private_association",
            "module.network.aws_route_table_association.public_association",
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc",
            "module.nginx_proxy.data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a38b8c18f189761a",
            "arn": "arn:aws:ec2:us-east-1:844787442232:instance/i-0920f5c5b506099f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0920f5c5b506099f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TerraKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0059b0aa6ef52358e",
            "private_dns": "ip-10-0-2-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.132",
            "public_dns": "ec2-13-218-32-94.compute-1.amazonaws.com",
            "public_ip": "13.218.32.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a271e1486292eaba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a989acc6066f715",
            "tags": {
              "Name": "zeyad-s-nginx-proxy-2"
            },
            "tags_all": {
              "Name": "zeyad-s-nginx-proxy-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de5aa2248debfd5b"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.zeyad_s_igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_route_table.zeyad_s_public_route_table",
            "module.network.aws_route_table_association.private_association",
            "module.network.aws_route_table_association.public_association",
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc",
            "module.nginx_proxy.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.private_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:loadbalancer/app/zeyad-s-private-alb/7435fd12b5931376",
            "arn_suffix": "app/zeyad-s-private-alb/7435fd12b5931376",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-zeyad-s-private-alb-316069313.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:loadbalancer/app/zeyad-s-private-alb/7435fd12b5931376",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zeyad-s-private-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de5aa2248debfd5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045ed5b6cbe5e6eb6"
              },
              {
                "subnet_id": "subnet-049ffd8dd8a661048"
              }
            ],
            "subnets": [
              "subnet-045ed5b6cbe5e6eb6",
              "subnet-049ffd8dd8a661048"
            ],
            "tags": {
              "Name": "zeyad-s-private-alb"
            },
            "tags_all": {
              "Name": "zeyad-s-private-alb"
            },
            "vpc_id": "vpc-0dd9642ccfa85ae76",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:listener/app/zeyad-s-private-alb/7435fd12b5931376/98aaace9a73bc4da",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-apache-tg/aa117a457ab425cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:listener/app/zeyad-s-private-alb/7435fd12b5931376/98aaace9a73bc4da",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:loadbalancer/app/zeyad-s-private-alb/7435fd12b5931376",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_vpc.zeyad_s_vpc",
            "module.private_alb.aws_lb.this",
            "module.private_alb.aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-apache-tg/aa117a457ab425cc",
            "arn_suffix": "targetgroup/zeyad-s-apache-tg/aa117a457ab425cc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-apache-tg/aa117a457ab425cc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "zeyad-s-apache-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "zeyad-s-apache-tg"
            },
            "tags_all": {
              "Name": "zeyad-s-apache-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "dependencies": [
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-apache-tg/aa117a457ab425cc-20250410225131290900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-apache-tg/aa117a457ab425cc",
            "target_id": "i-0004b9a42dbbf470a"
          },
          "dependencies": [
            "module.apache_private.aws_instance.apache_private",
            "module.apache_private.data.aws_ami.amazon_linux",
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_vpc.zeyad_s_vpc",
            "module.private_alb.aws_lb_target_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-apache-tg/aa117a457ab425cc-20250410225131750300000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-apache-tg/aa117a457ab425cc",
            "target_id": "i-0884f66d89e98cc17"
          },
          "dependencies": [
            "module.apache_private.aws_instance.apache_private",
            "module.apache_private.data.aws_ami.amazon_linux",
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_vpc.zeyad_s_vpc",
            "module.private_alb.aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:loadbalancer/app/zeyad-s-public-alb/b7aec559c8cdfc82",
            "arn_suffix": "app/zeyad-s-public-alb/b7aec559c8cdfc82",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "zeyad-s-public-alb-853786505.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:loadbalancer/app/zeyad-s-public-alb/b7aec559c8cdfc82",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zeyad-s-public-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de5aa2248debfd5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a989acc6066f715"
              },
              {
                "subnet_id": "subnet-0f39a2a3a1ab54b8e"
              }
            ],
            "subnets": [
              "subnet-00a989acc6066f715",
              "subnet-0f39a2a3a1ab54b8e"
            ],
            "tags": {
              "Name": "zeyad-s-public-alb"
            },
            "tags_all": {
              "Name": "zeyad-s-public-alb"
            },
            "vpc_id": "vpc-0dd9642ccfa85ae76",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:listener/app/zeyad-s-public-alb/b7aec559c8cdfc82/10bae2418da2c75a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-nginx-tg/152e437e7403817d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:listener/app/zeyad-s-public-alb/b7aec559c8cdfc82/10bae2418da2c75a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:loadbalancer/app/zeyad-s-public-alb/b7aec559c8cdfc82",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc",
            "module.public_alb.aws_lb.this",
            "module.public_alb.aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-nginx-tg/152e437e7403817d",
            "arn_suffix": "targetgroup/zeyad-s-nginx-tg/152e437e7403817d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-nginx-tg/152e437e7403817d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "zeyad-s-nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "zeyad-s-nginx-tg"
            },
            "tags_all": {
              "Name": "zeyad-s-nginx-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd9642ccfa85ae76"
          },
          "dependencies": [
            "module.network.aws_vpc.zeyad_s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-nginx-tg/152e437e7403817d-2025041022534330340000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-nginx-tg/152e437e7403817d",
            "target_id": "i-0cab83e611abcbd6f"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.zeyad_s_igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_route_table.zeyad_s_public_route_table",
            "module.network.aws_route_table_association.private_association",
            "module.network.aws_route_table_association.public_association",
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc",
            "module.nginx_proxy.aws_instance.nginx_proxy",
            "module.nginx_proxy.data.aws_ami.amazon_linux",
            "module.public_alb.aws_lb_target_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-nginx-tg/152e437e7403817d-2025041022534376040000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:844787442232:targetgroup/zeyad-s-nginx-tg/152e437e7403817d",
            "target_id": "i-0920f5c5b506099f6"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.zeyad_s_igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_route_table.zeyad_s_public_route_table",
            "module.network.aws_route_table_association.private_association",
            "module.network.aws_route_table_association.public_association",
            "module.network.aws_security_group.zeyad_s_sg",
            "module.network.aws_subnet.zeyad_s_private_subnets",
            "module.network.aws_subnet.zeyad_s_public_subnets",
            "module.network.aws_vpc.zeyad_s_vpc",
            "module.nginx_proxy.aws_instance.nginx_proxy",
            "module.nginx_proxy.data.aws_ami.amazon_linux",
            "module.public_alb.aws_lb_target_group.this"
          ]
        }
      ]
    }
  ]
}